adjust row class margin size to prevent overflow on mobile

--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -661,8 +661,8 @@ pre code {
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -150px;
-    margin-left: -150px;
+    //margin-right: -150px;
+   // margin-left: -150px;
 }
 
 .no-gutters {
